--- a/client/public/locales/ru/post-details.json
+++ b/client/public/locales/ru/post-details.json
@@ -1,17 +1,36 @@
 {
   "editPost": "Редактировать Пост",
-  "modal": {
-    "closeTitle": "Закрыть Пост",
-    "closeText": "Вы действительно хотите закрыть публикацию? При закрытии изменения не будут сохранены",
-    "deleteTitle": "Удалить Пост",
-    "deleteText": "Вы уверены, что хотите удалить это сообщение?"
-  },
-  "Yes": "Да",
-  "No": "Нет",
   "dropDown": {
     "editPost": "Редактировать Пост",
     "deletePost": "Удалить Пост"
   },
-  "saveChanges": "Сохранить Изменения",
-  "textAreaDescriptions": "Добавить описание публикации"
+  "info": {
+    "likes": "Нравится"
+  },
+  "edit": {
+    "descriptionTitle": "Добавить описание публикации",
+    "btn": "Сохранить изменения"
+  },
+  "modal": {
+    "yes": "Да",
+    "no": "Нет",
+    "update": {
+      "title": "Закрыть Редактирование Поста",
+      "text": "Вы действительно хотите закрыть публикацию? При закрытии изменения не будут сохранены"
+    },
+    "delete": {
+      "title": "Удалить Пост",
+      "text": "Вы уверены, что хотите удалить это сообщение?"
+    }
+  },
+  "toast": {
+    "success": {
+      "update": "Публикация была успешна обновлена",
+      "delete": "Публикация была успешна удалена"
+    },
+    "error": {
+      "update": "Что-то пошло не так, не удалось обновить публикацию. Пожалуйста, попробуйте немного позже...",
+      "delete": "Что-то пошло не так, не удалось удалить публикацию. Пожалуйста, попробуйте немного позже..."
+    }
+  }
 }
