--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -6,5 +6,10 @@
   "pagination": {
     "pages-amount-1": "Показать",
     "pages-amount-2": "на странице"
+  },
+  "dateFormatter": {
+    "seconds": "{{count}} секунд{{ending}} назад",
+    "minutes": "{{count}} минут{{ending}} назад",
+    "hours": "{{count}} час{{ending}} назад"
   }
 }
