add HomePage; linting

--- a/client/public/locales/en/post-details.json
+++ b/client/public/locales/en/post-details.json
@@ -2,7 +2,9 @@
   "editPost": "Edit Post",
   "dropDown": {
     "editPost": "Edit Post",
-    "deletePost": "Delete Post"
+    "deletePost": "Delete Post",
+    "follow": "Follow",
+    "copy": "Copy Link"
   },
   "info": {
     "likes": "Likes"
