--- a/client/public/locales/ru/post-details.json
+++ b/client/public/locales/ru/post-details.json
@@ -2,7 +2,9 @@
   "editPost": "Редактировать Пост",
   "dropDown": {
     "editPost": "Редактировать Пост",
-    "deletePost": "Удалить Пост"
+    "deletePost": "Удалить Пост",
+    "follow": "Подписаться",
+    "copy": "Копировать ссылку"
   },
   "info": {
     "likes": "Нравится"
