add: internet connection validation to profile settings; fix: profile settings bugs

--- a/client/public/locales/en/profile-page.json
+++ b/client/public/locales/en/profile-page.json
@@ -2,7 +2,7 @@
   "profile": {
     "following": "Following",
     "followers": "Followers",
-    "publications": "Publication",
+    "publications": "Publications",
     "settings": "Profile Settings"
   }
 }
