--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -26,14 +26,16 @@
       "aboutMe": {
         "max": "Это поле должно содержать не более 200 символов"
       },
-      "update": "Не удалось обновить информацию профиля. Попробуйте позже"
+      "update": "Не удалось обновить информацию профиля. Попробуйте позже",
+      "internet": "Не удалось обновить информацию профиля, нет подключения к Интернету."
     },
     "upload-modal": {
       "title": "Добавить аватар",
       "btn": "Выбрать с компьютера",
       "cropper-btn": "Сохранить",
       "errors": {
-        "size": "Ошибка! Размер фотографии должен быть меньше 10 МБ!"
+        "size": "Ошибка! Размер фотографии должен быть меньше 10 МБ!",
+        "internet": "Не удалось загрузить фотографию профиля, нет подключения к Интернету."
       }
     },
     "delete-modal": {
