--- a/client/public/locales/ru/post-details.json
+++ b/client/public/locales/ru/post-details.json
@@ -6,6 +6,12 @@
     "follow": "Подписаться",
     "copy": "Копировать ссылку"
   },
+  "features": {
+    "bookmark": {
+      "remove": "Публикация была успешно удалена из закладок",
+      "add": "Публикация была успешно добавлена в закладки"
+    }
+  },
   "info": {
     "likes": "Нравится"
   },
