--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -57,6 +57,20 @@
     "button": "Сохранить изменения",
     "avatar-btn": "Добавить аватар"
   },
+  "devices": {
+    "title": {
+      "current": "Текущее устройство",
+      "active": "Активные устройства"
+    },
+    "text": {
+      "absent": "Вы еще не авторизовались с других устройств",
+      "lastVisit": "Последнее посещение"
+    },
+    "features": {
+      "terminateOne": "Завершить сеанс",
+      "terminateAll": "Завершить все остальные сеансы"
+    }
+  },
   "account-managment": {
     "loader": {
       "create": "Пожалуйста, подождите. Идет перенаправление на страницу оплаты...",
